--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@
 out
 gen### Java template
 # Compiled class file
-*.class
-
 # Log file
 *.log
 
@@ -29,4 +27,5 @@ gen### Java template
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/NetGroup elevator.iml
+/src/META-INF/
+README.md
